# foretrust

./: .gitignore  CLAUDE.md  README.md  STATUS.md  TODO.md  docker-compose.yml  railway.json
.claude/: settings.local.json
scraper-service/: .doppler.yaml  Dockerfile  LIVE_DEAL_SHEET.md  OUTREACH_TACTICAL_SHEET.csv  README.md  REVENUE_MONEY_SHEET.csv  TODO.md  analyze_creative.py  analyze_trapped_leads.py  backfill_ecclix.py  bourbon_aggro.py  check_ecclix_status.py  check_supabase.py  day_pass_executioner.py  debug_ecclix.py  enrich_pva.py  enrich_pva_gis.py  enrich_zillow.py  find_4_bed_potential.py  full_inventory.txt  list_kcoj_elements.py  mass_enrich.py  migrate_supabase.py  monetize_now.py  priority_deals.py  pyproject.toml  query_4_bed.py  requirements.txt  revenue_engine.py  scan_stashes.py  watcher.py  wire_zillow.py
scraper-service/app/: browser.py  captcha.py  config.py  main.py  models.py  proxy.py  scheduler.py  secrets.py
scraper-service/app/connectors/: base.py  registry.py
scraper-service/scripts/: backfill_clerk_lead_ids.py  backfill_ecclix_addresses.py  ecclix_instrument_probe.py  ecclix_postmortem.py  ecclix_session_probe.py  enrich_pva_gis.py  rebuild_portal_intel_from_db.py
scraper-service/tests/: conftest.py  test_api_endpoints.py  test_base_connector.py  test_captcha.py  test_connectors_registry.py  test_ecclix_batch_parse.py  test_ecclix_row_parser.py  test_enrich.py  test_gis_address_enrichment.py  test_investment_scorer.py  test_normalize.py  test_notice_parse.py  test_property_address.py  test_proxy.py  test_supabase_client.py
(+158 files in other folders)
