[project]
name = "foretrust-scraper"
version = "1.0.0"
description = "Automated real-estate lead acquisition service for Foretrust"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "SUPABASE_URL=https://test.supabase.co",
    "SUPABASE_SERVICE_ROLE_KEY=test-service-role-key",
    "SCRAPER_SHARED_TOKEN=test-token-abc123",
]
